# ApollonGeant4Sim

./: CMakeLists.txt  README.md  main.cc  vis.mac
inc/: BreadboardFactory.hh  BreadboardMountFactory.hh  DetectorConstruction.hh  GeometryConstants.hh  GeometryPlacement.hh  MaterialFactory.hh  PrimaryGeneratorAction.hh  ReadoutPrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SamplingHit.hh  SamplingVolume.hh  TrackingChamberFactory.hh  TrackingChamberSupportFactory.hh  VacuumChamberFactory.hh  WendellDipoleFactory.hh
inc/detail/: LinkDef.h  RootDictDefs.h
src/: BreadboardFactory.cc  BreadboardMountFactory.cc  DetectorContruction.cc  GeometryPlacement.cc  MaterialFactory.cc  PrimaryGeneratorAction.cc  ReadoutPrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SamplingHit.cc  SamplingVolume.cc  TrackingChamberFactory.cc  TrackingChamberSupport.cc  VacuumChamberFactory.cc  WendellDipoleFactory.cc
